--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,53 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Rubik&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.min.css">
     <title>Cat Energy</title>
 
   </head>
   <body>
-    <div>Cat Energy</div>
+    <header class="header">
+      <a class="logo-header" href="#">
+        <img src="" alt="логотип cat energy">
+        <img src="" alt="">
+      </a>
+      <button class="burger-button"></button>
+      <nav class="header-nav">
+        <div class="header-nav__item">главная</div>
+        <div class="header-nav__item">каталог продукции</div>
+        <div class="header-nav__item">подбор программы</div>
+      </nav>
+
+      <div class="header__inner">
+        <h1 class="header__title">Функциональное
+          питание для котов</h1>
+        <p class="header__description">Занялся собой? Займись котом!</p>
+        <img src="" alt="изображение корма cat energy pro">
+        <button class="button" type="button">
+          подобрать программу
+        </button>
+      </div>
+    </header>
+
+    <main>
+      <section class="features">
+        <div class="features__block">
+          <h2 class="title features__title">похудение</h2>
+          <p class="features__descriptions">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
+            Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+          <a class="features__link" href="#">каталог slim</a>
+        </div>
+
+        <div class="features__block">
+          <h2 class="title features__title features__title--weight">Набор массы</h2>
+          <p class="features__descriptions">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro
+            поможет вашему коту нарастить необходимые мышцы!</p>
+          <a class="features__link" href="#">каталог pro</a>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
