--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Rubik&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.min.css">
     <title>Cat Energy</title>
 
@@ -36,18 +36,70 @@
     <main>
       <section class="features">
         <div class="features__block">
-          <h2 class="title features__title">похудение</h2>
+          <h3 class="title features__title">похудение</h3>
           <p class="features__descriptions">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
             Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
           <a class="features__link" href="#">каталог slim</a>
         </div>
 
         <div class="features__block">
-          <h2 class="title features__title features__title--weight">Набор массы</h2>
+          <h3 class="title features__title features__title--weight">Набор массы</h3>
           <p class="features__descriptions">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro
             поможет вашему коту нарастить необходимые мышцы!</p>
           <a class="features__link" href="#">каталог pro</a>
         </div>
+      </section>
+
+      <section class="benefits">
+        <h2 class="title benefits__title">Как это работает</h2>
+
+        <ul class="benefits__list">
+          <li class="benefits__item benefits__item--nutrition">
+            Функциональное питание содержит только полезные питательные вещества.
+          </li>
+          <li class="benefits__item benefits__item--powder">
+            Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
+          </li>
+          <li class="benefits__item benefits__item--replacement">
+            Замените один-два приема обычной еды на наше функциональное питание.
+          </li>
+          <li class="benefits__item benefits__item--improvement">
+            Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
+          </li>
+        </ul>
+        <div class="benefits__item">
+        </div>
+      </section>
+
+      <section class="example">
+        <h2 class="title example__title">Живой пример</h2>
+        <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy
+          Slim. Отличный результат без
+          изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день. </p>
+        <div class="example__features">
+          <p class="example__subtitle">5 КГ</p>
+          <p class="example__desc">снижение веса</p>
+        </div>
+        <div class="example__features">
+          <p class="example__subtitle">60 КГ</p>
+          <p class="example__desc">затрачено времени</p>
+        </div>
+        <div class="example__about">Затраты на питание: 15 000 РУБ.</div>
+        <img src="" alt="изображение кота до приема корма cat energy">
+        <div class="example__block">
+          <span class="example__text">Было</span>
+          <span class="example__slider"></span>
+          <span class="example__text">Стало</span>
+        </div>
+
+      </section>
+      <section class="invite">
+        <h3 class="invite__title">приглашаем к сотрудничеству дилеров!</h3>
+        <p class="invite__description">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+      </section>
+
+      <section class="map">
+        <span class="map__logo"></span>
       </section>
     </main>
   </body>
