--- a/src/index.html
+++ b/src/index.html
@@ -99,8 +99,39 @@
       </section>
 
       <section class="map">
+        <h3><span class="visually-hidden">карта проезда в компанию</span></h3>
         <span class="map__logo"></span>
       </section>
     </main>
+
+    <footer class="footer">
+      <img src="" alt="логотип компании cat energy">
+      <section class="socials">
+        <h3><span class="visually-hidden">список ссылок перехода в социальные сети компании cat energy</span></h3>
+        <ul class="socials__list">
+          <li>
+            <a class="socials__link socials__link--vk" href="#">
+              <span class="visually-hidden">Вконтакте</span>
+            </a>
+          </li>
+          <li>
+            <a class="socials__link socials__link--instagram" href="#">
+              <span class="visually-hidden">instagram</span>
+            </a>
+          </li>
+          <li>
+            <a class="socials__link socials__link--facebook" href="#">
+              <span class="visually-hidden">facebook</span>
+            </a>
+          </li>
+        </ul>
+      </section>
+
+      <section class="copyright">
+        <h3><span class="visually-hidden">копирайт фирмы разработки сайта</span></h3>
+        <p class="copyright">HTML Academy</p>
+        <span class="copyright__logo"></span>
+      </section>
+    </footer>
   </body>
 </html>
