--- a/src/index.html
+++ b/src/index.html
@@ -13,27 +13,29 @@
     <header class="header">
       <a class="logo-header" href="#">
         <img src="" alt="логотип cat energy">
+      </a>
+      <a href="#">
         <img src="" alt="">
       </a>
-      <button class="burger-button"></button>
+      <button class="burger-button"><span class="visually-hidden">кнопка меню навигации по сайту</span></button>
       <nav class="header-nav">
-        <div class="header-nav__item">главная</div>
-        <div class="header-nav__item">каталог продукции</div>
-        <div class="header-nav__item">подбор программы</div>
+        <a class="header-nav__item" href="index.html">главная</a>
+        <a class="header-nav__item" href="catalog.html">каталог продукции</a>
+        <a class="header-nav__item" href="#">подбор программы</a>
       </nav>
-
-      <div class="header__inner">
-        <h1 class="header__title">Функциональное
-          питание для котов</h1>
-        <p class="header__description">Занялся собой? Займись котом!</p>
-        <img src="" alt="изображение корма cat energy pro">
-        <button class="button" type="button">
-          подобрать программу
-        </button>
-      </div>
     </header>
 
     <main>
+      <section class="content">
+        <h1 class="content__title">Функциональное
+          питание для котов</h1>
+        <p class="content__description">Занялся собой? Займись котом!</p>
+        <img class="content__img" src="" alt="изображение корма cat energy pro">
+        <button class="button content__button" type="button">
+          подобрать программу
+        </button>
+      </section>
+
       <section class="features">
         <div class="features__block">
           <h3 class="title features__title">похудение</h3>
@@ -67,8 +69,6 @@
             Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
           </li>
         </ul>
-        <div class="benefits__item">
-        </div>
       </section>
 
       <section class="example">
@@ -88,7 +88,9 @@
         <img src="" alt="изображение кота до приема корма cat energy">
         <div class="example__block">
           <span class="example__text">Было</span>
-          <span class="example__slider"></span>
+          <div class="example__slider">
+            <button class="example--slider-button" type="button"></button>
+          </div>
           <span class="example__text">Стало</span>
         </div>
 
@@ -100,12 +102,14 @@
 
       <section class="map">
         <h3><span class="visually-hidden">карта проезда в компанию</span></h3>
+        <img src="" alt="карта расположения компании cat energy">
         <span class="map__logo"></span>
       </section>
     </main>
 
     <footer class="footer">
-      <img src="" alt="логотип компании cat energy">
+      <a class="footer__logo" href="index.html"><img src="" alt="логотип компании cat energy"></a>
+
       <section class="socials">
         <h3><span class="visually-hidden">список ссылок перехода в социальные сети компании cat energy</span></h3>
         <ul class="socials__list">
@@ -127,11 +131,10 @@
         </ul>
       </section>
 
-      <section class="copyright">
-        <h3><span class="visually-hidden">копирайт фирмы разработки сайта</span></h3>
-        <p class="copyright">HTML Academy</p>
-        <span class="copyright__logo"></span>
-      </section>
+      <a class="copyright" href="https://htmlacademy.ru/">
+        HTML Academy
+        <span class="visually-hidden">ссыка на сайт фирмы разработки сайта</span>
+      </a>
     </footer>
   </body>
 </html>
