Стилизация блока header

--- a/src/index.html
+++ b/src/index.html
@@ -11,17 +11,17 @@
   </head>
   <body>
     <header class="header">
-      <a class="logo-header" href="#">
-        <img src="" alt="логотип cat energy">
+      <a class="header__logo" href="#">
+        <img src="img/logo-mobile.svg" width="34" height="38" alt="логотип cat energy">
       </a>
-      <a href="#">
-        <img src="" alt="">
+      <a class="header__logo" href="#">
+        <img src="img/logo-mobile2.svg" width="101" height="18" alt="">
       </a>
-      <button class="burger-button"><span class="visually-hidden">кнопка меню навигации по сайту</span></button>
-      <nav class="header-nav">
-        <a class="header-nav__item" href="index.html">главная</a>
-        <a class="header-nav__item" href="catalog.html">каталог продукции</a>
-        <a class="header-nav__item" href="#">подбор программы</a>
+      <button class="header__burger-button"><span class="visually-hidden">кнопка меню навигации по сайту</span></button>
+      <nav class="navigation">
+        <a class="navigation__item" href="index.html">главная</a>
+        <a class="navigation__item" href="catalog.html">каталог продукции</a>
+        <a class="navigation__item" href="#">подбор программы</a>
       </nav>
     </header>
 
@@ -89,7 +89,7 @@
         <div class="example__block">
           <span class="example__text">Было</span>
           <div class="example__slider">
-            <button class="example--slider-button" type="button"></button>
+            <button class="example__slider-button" type="button"></button>
           </div>
           <span class="example__text">Стало</span>
         </div>
