Стилизация блока content. Добавление блока overlay.

--- a/src/index.html
+++ b/src/index.html
@@ -27,13 +27,23 @@
 
     <main>
       <section class="content">
-        <h1 class="content__title">Функциональное
-          питание для котов</h1>
-        <p class="content__description">Занялся собой? Займись котом!</p>
-        <img class="content__img" src="" alt="изображение корма cat energy pro">
-        <button class="button content__button" type="button">
-          подобрать программу
-        </button>
+        <div class="content__container">
+          <div class="overlay"></div>
+          <div class="content__background"></div>
+        </div>
+        <div class="layout">
+          <h1 class="content__title">Функциональное
+            питание для котов</h1>
+          <p class="content__description">Занялся собой? Займись котом!</p>
+          <img
+              class="content__img" src="img/content-img.png" width="280" height="270"
+              alt="изображение корма cat energy pro"
+          >
+          <button class="button content__button" type="button">
+            подобрать программу
+          </button>
+        </div>
+
       </section>
 
       <section class="features">
