--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
@@ -26,23 +27,17 @@
     </header>
 
     <main>
-      <section class="content">
-        <div class="content__container">
-          <div class="overlay"></div>
-          <div class="content__background"></div>
-        </div>
-        <div class="layout">
-          <h1 class="content__title">Функциональное
-            питание для котов</h1>
-          <p class="content__description">Занялся собой? Займись котом!</p>
-          <img
-              class="content__img" src="img/content-img.png" width="280" height="270"
-              alt="изображение корма cat energy pro"
-          >
-          <button class="button content__button" type="button">
-            подобрать программу
-          </button>
-        </div>
+      <section class="content layout-mobile">
+        <h1 class="content__title">Функциональное
+          питание для котов</h1>
+        <p class="content__description">Занялся собой? Займись котом!</p>
+        <img
+            class="content__img" src="img/content-img.png" width="280" height="270"
+            alt="изображение корма cat energy pro"
+        >
+        <button class="button" type="button">
+          подобрать программу
+        </button>
 
       </section>
 
