Правка блока content.

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
     </header>
 
     <main>
-      <section class="content layout-mobile">
+      <section class="content layout">
         <h1 class="content__title">Функциональное
           питание для котов</h1>
         <p class="content__description">Занялся собой? Займись котом!</p>
