Правки стилей согласно комментариев.

--- a/src/index.html
+++ b/src/index.html
@@ -11,15 +11,17 @@
 
   </head>
   <body>
-    <header class="header">
+    <header class="header layout">
       <a class="header__logo" href="#">
         <img src="img/logo-mobile.svg" width="34" height="38" alt="логотип cat energy">
       </a>
-      <a class="header__logo" href="#">
+      <a class="header__logo header__logo--text" href="#">
         <img src="img/logo-mobile2.svg" width="101" height="18" alt="">
       </a>
-      <button class="header__burger-button"><span class="visually-hidden">кнопка меню навигации по сайту</span></button>
-      <nav class="navigation">
+      <button class="burger-button">
+        <span class="burger-button__line"></span>
+        <span class="visually-hidden">кнопка меню навигации по сайту</span></button>
+      <nav class="navigation navigation--disable">
         <a class="navigation__item" href="index.html">главная</a>
         <a class="navigation__item" href="catalog.html">каталог продукции</a>
         <a class="navigation__item" href="#">подбор программы</a>
