--- a/src/index.html
+++ b/src/index.html
@@ -18,10 +18,17 @@
       <a class="header__logo header__logo--text" href="#">
         <img src="img/logo-mobile2.svg" width="101" height="18" alt="">
       </a>
-      <button class="burger-button">
-        <span class="burger-button__line"></span>
+      <button
+          class="burger-button
+<!--      burger-button&#45;&#45;close-->
+"
+      >
         <span class="visually-hidden">кнопка меню навигации по сайту</span></button>
-      <nav class="navigation navigation--disable">
+      <nav
+          class="navigation
+<!--      navigation&#45;&#45;disable-->
+"
+      >
         <a class="navigation__item" href="index.html">главная</a>
         <a class="navigation__item" href="catalog.html">каталог продукции</a>
         <a class="navigation__item" href="#">подбор программы</a>
