Правки стилей согласно комментариев ver3.

--- a/src/index.html
+++ b/src/index.html
@@ -19,16 +19,9 @@
         <img src="img/logo-mobile2.svg" width="101" height="18" alt="">
       </a>
       <button
-          class="burger-button
-<!--      burger-button&#45;&#45;close-->
-"
-      >
+          class="burger-button">
         <span class="visually-hidden">кнопка меню навигации по сайту</span></button>
-      <nav
-          class="navigation
-<!--      navigation&#45;&#45;disable-->
-"
-      >
+      <nav class="navigation">
         <a class="navigation__item" href="index.html">главная</a>
         <a class="navigation__item" href="catalog.html">каталог продукции</a>
         <a class="navigation__item" href="#">подбор программы</a>
