Правки стилей согласно комментариев ver4.

--- a/src/index.html
+++ b/src/index.html
@@ -18,9 +18,9 @@
       <a class="header__logo header__logo--text" href="#">
         <img src="img/logo-mobile2.svg" width="101" height="18" alt="">
       </a>
-      <button
-          class="burger-button">
-        <span class="visually-hidden">кнопка меню навигации по сайту</span></button>
+      <button class="burger-button">
+        <span class="visually-hidden">кнопка меню навигации по сайту</span>
+      </button>
       <nav class="navigation">
         <a class="navigation__item" href="index.html">главная</a>
         <a class="navigation__item" href="catalog.html">каталог продукции</a>
