Правки стилей согласно комментариев ver4.

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
       <button class="burger-button">
         <span class="visually-hidden">кнопка меню навигации по сайту</span>
       </button>
-      <nav class="navigation">
+      <nav class="navigation navigation--disable">
         <a class="navigation__item" href="index.html">главная</a>
         <a class="navigation__item" href="catalog.html">каталог продукции</a>
         <a class="navigation__item" href="#">подбор программы</a>
