--- a/src/index.html
+++ b/src/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.min.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oswald&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/style.min.css" />
     <title>Cat Energy</title>
-
   </head>
   <body>
     <header class="header layout">
       <a class="header__logo" href="#">
-        <img src="img/logo-mobile.svg" width="34" height="38" alt="логотип cat energy">
+        <img src="img/logo-mobile.svg" width="34" height="38" alt="логотип cat energy" />
       </a>
       <a class="header__logo header__logo--text" href="#">
-        <img src="img/logo-mobile2.svg" width="101" height="18" alt="">
+        <img src="img/logo-mobile2.svg" width="101" height="18" alt="" />
       </a>
       <button class="burger-button">
         <span class="visually-hidden">кнопка меню навигации по сайту</span>
@@ -30,31 +32,34 @@
 
     <main>
       <section class="content layout">
-        <h1 class="content__title">Функциональное
-          питание для котов</h1>
+        <h1 class="content__title">Функциональное питание для котов</h1>
         <p class="content__description">Занялся собой? Займись котом!</p>
         <img
-            class="content__img" src="img/content-img.png" width="280" height="270"
-            alt="изображение корма cat energy pro"
-        >
-        <button class="button" type="button">
-          подобрать программу
-        </button>
-
+          class="content__img"
+          src="img/content-img.png"
+          width="280"
+          height="270"
+          alt="изображение корма cat energy pro"
+        />
+        <button class="button" type="button">подобрать программу</button>
       </section>
 
       <section class="features">
         <div class="features__block">
           <h3 class="title features__title">похудение</h3>
-          <p class="features__descriptions">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
-            Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+          <p class="features__descriptions">
+            Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
+            Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
+          </p>
           <a class="features__link" href="#">каталог slim</a>
         </div>
 
         <div class="features__block">
           <h3 class="title features__title features__title--weight">Набор массы</h3>
-          <p class="features__descriptions">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro
-            поможет вашему коту нарастить необходимые мышцы!</p>
+          <p class="features__descriptions">
+            Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro
+            поможет вашему коту нарастить необходимые мышцы!
+          </p>
           <a class="features__link" href="#">каталог pro</a>
         </div>
       </section>
@@ -80,9 +85,11 @@
 
       <section class="example">
         <h2 class="title example__title">Живой пример</h2>
-        <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy
-          Slim. Отличный результат без
-          изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день. </p>
+        <p class="example__description">
+          Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy
+          Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих
+          привычек и по-прежнему спит по 16 часов в день.
+        </p>
         <div class="example__features">
           <p class="example__subtitle">5 КГ</p>
           <p class="example__desc">снижение веса</p>
@@ -92,7 +99,7 @@
           <p class="example__desc">затрачено времени</p>
         </div>
         <div class="example__about">Затраты на питание: 15 000 РУБ.</div>
-        <img src="" alt="изображение кота до приема корма cat energy">
+        <img src="" alt="изображение кота до приема корма cat energy" />
         <div class="example__block">
           <span class="example__text">Было</span>
           <div class="example__slider">
@@ -100,7 +107,6 @@
           </div>
           <span class="example__text">Стало</span>
         </div>
-
       </section>
       <section class="invite">
         <h3 class="invite__title">приглашаем к сотрудничеству дилеров!</h3>
@@ -109,16 +115,22 @@
 
       <section class="map">
         <h3><span class="visually-hidden">карта проезда в компанию</span></h3>
-        <img src="" alt="карта расположения компании cat energy">
+        <img src="" alt="карта расположения компании cat energy" />
         <span class="map__logo"></span>
       </section>
     </main>
 
     <footer class="footer">
-      <a class="footer__logo" href="index.html"><img src="" alt="логотип компании cat energy"></a>
+      <a class="footer__logo" href="index.html"
+        ><img src="" alt="логотип компании cat energy"
+      /></a>
 
       <section class="socials">
-        <h3><span class="visually-hidden">список ссылок перехода в социальные сети компании cat energy</span></h3>
+        <h3>
+          <span class="visually-hidden"
+            >список ссылок перехода в социальные сети компании cat energy</span
+          >
+        </h3>
         <ul class="socials__list">
           <li>
             <a class="socials__link socials__link--vk" href="#">
