--- a/src/index.html
+++ b/src/index.html
@@ -44,23 +44,29 @@
         <button class="button" type="button">подобрать программу</button>
       </section>
 
-      <section class="features">
-        <div class="features__block">
-          <h3 class="title features__title">похудение</h3>
-          <p class="features__descriptions">
-            Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
-            Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
-          </p>
-          <a class="features__link" href="#">каталог slim</a>
+      <section class="features layout">
+        <div class="features__wrapper">
+          <div class="features__block">
+            <h3 class="title features__title">похудение</h3>
+            <p class="features__descriptions">
+              Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
+              Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
+            </p>
+            <a class="text features__link" href="#">каталог slim</a>
+          </div>
+          <div class="features__img"></div>
         </div>
 
-        <div class="features__block">
-          <h3 class="title features__title features__title--weight">Набор массы</h3>
-          <p class="features__descriptions">
-            Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro
-            поможет вашему коту нарастить необходимые мышцы!
-          </p>
-          <a class="features__link" href="#">каталог pro</a>
+        <div class="features__wrapper">
+          <div class="features__block">
+            <h3 class="title features__title">Набор массы</h3>
+            <p class="features__descriptions">
+              Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro
+              поможет вашему коту нарастить необходимые мышцы!
+            </p>
+            <a class="text features__link" href="#">каталог pro</a>
+          </div>
+          <div class="features__img features__img--weight"></div>
         </div>
       </section>
 
