--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,7 @@
       <section class="features layout">
         <div class="features__wrapper">
           <div class="features__block">
-            <h3 class="title features__title">похудение</h3>
+            <h3 class="features__title">похудение</h3>
             <p class="features__descriptions">
               Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
               Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
@@ -59,7 +59,7 @@
 
         <div class="features__wrapper">
           <div class="features__block">
-            <h3 class="title features__title">Набор массы</h3>
+            <h3 class="features__title">Набор массы</h3>
             <p class="features__descriptions">
               Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro
               поможет вашему коту нарастить необходимые мышцы!
@@ -71,7 +71,7 @@
       </section>
 
       <section class="benefits">
-        <h2 class="title benefits__title">Как это работает</h2>
+        <h2 class="benefits__title">Как это работает</h2>
 
         <ul class="benefits__list">
           <li class="benefits__item benefits__item--nutrition">
@@ -90,7 +90,7 @@
       </section>
 
       <section class="example">
-        <h2 class="title example__title">Живой пример</h2>
+        <h2 class="example__title">Живой пример</h2>
         <p class="example__description">
           Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy
           Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих
