Стилизация блока benefits

--- a/src/index.html
+++ b/src/index.html
@@ -112,11 +112,11 @@
         </div>
       </section>
 
-      <section class="benefits">
+      <section class="benefits layout">
         <h2 class="benefits__title">Как это работает</h2>
 
         <ul class="benefits__list">
-          <li class="benefits__item benefits__item--nutrition">
+          <li class="benefits__item">
             Функциональное питание содержит только полезные питательные вещества.
           </li>
           <li class="benefits__item benefits__item--powder">
