Правки блоков example, example-slider, description-list

--- a/src/index.html
+++ b/src/index.html
@@ -140,36 +140,35 @@
             привычек и по-прежнему спит по 16 часов в день.
           </p>
           <dl class="description-list">
-            <div class="description-list__box">
-              <dt class="description-list__subtitle">5 КГ</dt>
-              <dd class="description-list__item">снижение </br> веса</dd>
+            <div class="description-list__wrapper">
+              <div class="description-list__box">
+                <dt class="description-list__subtitle">5 КГ</dt>
+                <dd class="description-list__item">снижение </br> веса</dd>
+              </div>
+              <div class="description-list__box">
+                <dt class="description-list__subtitle">60 дней</dt>
+                <dd class="description-list__item">затрачено </br> времени</dd>
+              </div>
             </div>
-            <div class="description-list__box">
-              <dt class="description-list__subtitle">60 КГ</dt>
-              <dd class="description-list__item">затрачено </br> времени</dd>
-            </div>
+            <dt class="description-list__about">Затраты на питание: 15 000 РУБ.</dt>
           </dl>
-          <div class="example__about">Затраты на питание: 15 000 РУБ.</div>
-          <div class="example__img-block">
-
-          </div>
-          <div class="example-slider">
-            <div class="example-slider__img-block">
+          <div class="slider">
+            <div class="slider__img-block">
               <img
-                  class="example-slider__slide" src="img/fat.png" width="280" height="240"
+                  class="slider__slide" src="img/fat.png" height="240"
                   alt="изображение кота до приема корма cat energy"
               />
               <img
-                  class="example-slider__slide" src="img/skinny.png" width="280" height="240"
+                  class="slider__slide" src="img/skinny.png" height="240"
                   alt="изображение кота после приема корма cat energy"
               />
             </div>
-            <div class="example-slider__block">
-              <button class="example-slider__button example-slider__button--fat" type="button">Было</button>
-              <div class="example-slider__slider-line">
-                <button class="example-slider__roller" type="button"></button>
+            <div class="slider__controls">
+              <button class="slider__button slider__button--prev" type="button">Было</button>
+              <div class="slider__slider-line">
+                <button class="slider__roller" type="button"></button>
               </div>
-              <button class="example-slider__button example-slider__button--skinny" type="button">Стало</button>
+              <button class="slider__button slider__button--next" type="button">Стало</button>
             </div>
           </div>
         </div>
