--- a/src/index.html
+++ b/src/index.html
@@ -140,20 +140,21 @@
             привычек и по-прежнему спит по 16 часов в день.
           </p>
           <dl class="description-list">
-            <div class="description-list__wrapper">
-              <div class="description-list__box">
-                <dt class="description-list__subtitle">5 КГ</dt>
-                <dd class="description-list__item">снижение </br> веса</dd>
-              </div>
-              <div class="description-list__box">
-                <dt class="description-list__subtitle">60 дней</dt>
-                <dd class="description-list__item">затрачено </br> времени</dd>
-              </div>
+            <div class="description-list__box description-list__box--allotted">
+              <dt class="description-list__title">снижение </br> веса</dt>
+              <dd class="description-list__item">5 КГ</dd>
             </div>
-            <dt class="description-list__about">Затраты на питание: 15 000 РУБ.</dt>
+            <div class="description-list__box description-list__box--allotted">
+              <dt class="description-list__title">затрачено </br> времени</dt>
+              <dd class="description-list__item">60 дней</dd>
+            </div>
+            <div class="description-list__box">
+              <dt class="description-list__title">Затраты на питание:</dt>
+              <dd class="description-list__item">15 000 РУБ.</dd>
+            </div>
           </dl>
           <div class="slider">
-            <div class="slider__img-block">
+            <div class="slider__inner">
               <img
                   class="slider__slide" src="img/fat.png" height="240"
                   alt="изображение кота до приема корма cat energy"
