--- a/src/index.html
+++ b/src/index.html
@@ -166,7 +166,7 @@
             </div>
             <div class="slider__controls">
               <button class="slider__button slider__button--prev" type="button">Было</button>
-              <div class="slider__slider-line">
+              <div class="slider__line">
                 <button class="slider__roller" type="button"></button>
               </div>
               <button class="slider__button slider__button--next" type="button">Стало</button>
