Стилизация блока map. Изменение блока invite

--- a/src/index.html
+++ b/src/index.html
@@ -175,31 +175,31 @@
         </div>
       </section>
 
-      <section class="invite">
-        <h3 class="invite__title">приглашаем к сотрудничеству дилеров!</h3>
-        <p class="invite__description">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
-      </section>
-
       <section class="map">
-        <h3><span class="visually-hidden">карта проезда в компанию</span></h3>
-        <img src="" alt="карта расположения компании cat energy"/>
-        <span class="map__logo"></span>
+        <div class="map__inner">
+          <h3 class="map__title">приглашаем к&nbsp;сотрудничеству дилеров!</h3>
+          <p class="map__description">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+          <h3><span class="visually-hidden">карта проезда в компанию</span></h3>
+        </div>
+        <div class="map__box">
+          <img
+              class="map__img" src="img/map-mobile.jpg" width="320" height="362"
+              alt="карта расположения компании cat energy"
+          />
+          <span class="map__logo"></span>
+        </div>
       </section>
     </main>
 
     <footer class="footer">
-      <a
-          class="footer__logo" href="index.html"
-      ><img
-          src="" alt="логотип компании cat energy"
-      /></a>
-
+      <a class="footer__logo" href="index.html">
+        <img src="" alt="логотип компании cat energy"/>
+      </a>
       <section class="socials">
         <h3>
-          <span
-              class="visually-hidden"
-          >список ссылок перехода в социальные сети компании cat energy</span
-          >
+          <span class="visually-hidden">
+            список ссылок перехода в социальные сети компании cat energy
+          </span>
         </h3>
         <ul class="socials__list">
           <li>
