Стилизация блоков footer & socials

--- a/src/index.html
+++ b/src/index.html
@@ -187,19 +187,16 @@
       </section>
     </main>
 
-    <footer class="footer">
-      <a
-          class="footer__logo" href="index.html"
-      ><img
-          src="" alt="логотип компании cat energy"
-      /></a>
+    <footer class="footer layout">
+      <a class="footer__logo" href="index.html">
+        <img class="footer__img" src="img/footer-logo.svg" alt="логотип компании cat energy"/>
+      </a>
 
       <section class="socials">
         <h3>
-          <span
-              class="visually-hidden"
-          >список ссылок перехода в социальные сети компании cat energy</span
-          >
+          <span class="visually-hidden">
+            список ссылок перехода в социальные сети компании cat energy
+          </span>
         </h3>
         <ul class="socials__list">
           <li>
@@ -220,9 +217,10 @@
         </ul>
       </section>
 
-      <a class="copyright" href="https://htmlacademy.ru/">
+      <a class="footer__copyright" href="https://htmlacademy.ru/">
         HTML Academy
         <span class="visually-hidden">ссыка на сайт фирмы разработки сайта</span>
+        <img src="img/logo_html.svg" alt="логотип HTML academy">
       </a>
     </footer>
   </body>
