--- a/src/index.html
+++ b/src/index.html
@@ -176,17 +176,15 @@
       </section>
 
       <section class="map">
-        <div class="map__inner">
+        <div class="map__address layout">
           <h3 class="map__title">приглашаем к&nbsp;сотрудничеству дилеров!</h3>
           <p class="map__description">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
-          <h3><span class="visually-hidden">карта проезда в компанию</span></h3>
         </div>
-        <div class="map__box">
+        <div class="layout map__box">
           <img
-              class="map__img" src="img/map-mobile.jpg" width="320" height="362"
+              class="map__mark" src="img/marker-icon.png" width="57" height="53"
               alt="карта расположения компании cat energy"
           />
-          <span class="map__logo"></span>
         </div>
       </section>
     </main>
