Правка версии header

--- a/src/index.html
+++ b/src/index.html
@@ -14,13 +14,13 @@
   </head>
   <body>
     <header class="header layout">
-      <a class="header__logo" href="#">
+      <a href="#">
         <picture>
           <source srcset="img/logo-tablet.svg" media="(min-width: 768px)" />
           <img src="img/logo-mobile.svg" alt="логотип cat energy" />
         </picture>
       </a>
-      <a class="header__logo header__logo--text" href="#">
+      <a class="header__logo--text" href="#">
         <img src="img/logo-mobile2.svg" width="101" height="18" alt="" />
       </a>
       <button class="burger-button">
