Правка версии header

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
           <img src="img/logo-mobile.svg" alt="логотип cat energy" />
         </picture>
       </a>
-      <a class="header__logo--text" href="#">
+      <a class="header__logo" href="#">
         <img src="img/logo-mobile2.svg" width="101" height="18" alt="" />
       </a>
       <button class="burger-button">
