fix2 tablet версии content

--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
           <source srcset="img/content-img-tablet.jpg" media="(min-width: 768px)" />
           <img src="img/content-img.png" alt="изображение корма cat energy pro" />
         </picture>
-        <button class="button" type="button">подобрать программу</button>
+        <button class="button content__button" type="button">подобрать программу</button>
       </section>
 
       <section class="features layout">
