--- a/src/index.html
+++ b/src/index.html
@@ -117,16 +117,24 @@
 
         <ul class="benefits__list">
           <li class="benefits__item">
-            Функциональное питание содержит только полезные питательные вещества.
+            Функциональное питание<br />
+            содержит только полезные<br />
+            питательные вещества.
           </li>
           <li class="benefits__item benefits__item--powder">
-            Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
+            Выпускается в виде порошка,<br />
+            который нужно лишь залить<br />
+            кипятком и готово.
           </li>
           <li class="benefits__item benefits__item--replacement">
-            Замените один-два приема обычной еды на наше функциональное питание.
+            Замените один-два приема<br />
+            обычной еды на наше<br />
+            функциональное питание.
           </li>
           <li class="benefits__item benefits__item--improvement">
-            Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
+            Уже через месяц наслаждайтесь<br />
+            изменениями к лучшему<br />
+            вашего питомца!
           </li>
         </ul>
       </section>
