--- a/src/index.html
+++ b/src/index.html
@@ -49,8 +49,9 @@
           <div class="features__block">
             <h3 class="features__title">похудение</h3>
             <p class="features__descriptions">
-              Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
-              Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
+              Ваш кот весит больше собаки и&nbsp;почти утратил способность лазить
+              по&nbsp;деревьям? Пора на&nbsp;диету! Cat Energy Slim поможет вашему питомцу
+              сбросить лишний вес.
             </p>
             <a class="text features__link" href="#">каталог slim</a>
           </div>
@@ -82,8 +83,8 @@
           <div class="features__block">
             <h3 class="features__title">Набор массы</h3>
             <p class="features__descriptions">
-              Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro
-              поможет вашему коту нарастить необходимые мышцы!
+              Заработать авторитет среди дворовых котов и&nbsp;даже собак? Серия Cat
+              Energy Pro поможет вашему коту нарастить необходимые мышцы!
             </p>
             <a class="text features__link" href="#">каталог pro</a>
           </div>
@@ -143,23 +144,18 @@
         <div class="layout">
           <h2 class="example__title">Живой пример</h2>
           <p class="example__description">
-            Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy
-            Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих
-            привычек и по-прежнему спит по 16 часов в день.
+            Борис сбросил 5&nbsp;кг за&nbsp;2&nbsp;месяца, просто заменив свой обычный
+            корм на&nbsp;Cat Energy Slim. Отличный результат без изнуряющих тренировок!
+            При этом он&nbsp;не&nbsp;менял своих привычек и&nbsp;по-прежнему спит
+            по&nbsp;16&nbsp;часов в&nbsp;день.
           </p>
           <dl class="description-list">
             <div class="description-list__box description-list__box--allotted">
-              <dt class="description-list__title">
-                снижение <br />
-                веса
-              </dt>
+              <dt class="description-list__title">снижение веса</dt>
               <dd class="description-list__item">5 КГ</dd>
             </div>
             <div class="description-list__box description-list__box--allotted">
-              <dt class="description-list__title">
-                затрачено <br />
-                времени
-              </dt>
+              <dt class="description-list__title">затрачено времени</dt>
               <dd class="description-list__item">60 дней</dd>
             </div>
             <div class="description-list__box">
@@ -169,18 +165,21 @@
           </dl>
           <div class="slider">
             <div class="slider__inner">
-              <img
-                class="slider__slide"
-                src="img/fat.png"
-                height="240"
-                alt="изображение кота до приема корма cat energy"
-              />
-              <img
-                class="slider__slide"
-                src="img/skinny.png"
-                height="240"
-                alt="изображение кота после приема корма cat energy"
-              />
+              <picture class="slider__slide">
+                <source srcset="img/cat-fat-tablet.png" media="(min-width: 768px)" />
+                <img
+                  src="img/fat.png"
+                  alt="изображение кота до приема корма cat energy"
+                />
+              </picture>
+
+              <picture class="slider__slide slider__slide--hide">
+                <source srcset="img/cat-skinny-tablet.png" media="(min-width: 768px)" />
+                <img
+                  src="img/skinny.png"
+                  alt="изображение кота после приема корма cat energy"
+                />
+              </picture>
             </div>
             <div class="slider__controls">
               <button class="slider__button slider__button--prev" type="button">
