Стилизация tablet версии блока footer

--- a/src/index.html
+++ b/src/index.html
@@ -251,7 +251,7 @@
 
       <div class="footer__copyright">
         <a class="footer__link" href="https://htmlacademy.ru/">
-          HTML Academy
+          HTML&nbsp;Academy
           <img src="img/logo_html.svg" alt="логотип HTML academy" />
         </a>
       </div>
