--- a/src/index.html
+++ b/src/index.html
@@ -118,24 +118,24 @@
 
         <ul class="benefits__list">
           <li class="benefits__item">
-            Функциональное питание<br />
-            содержит только полезные<br />
-            питательные вещества.
+            <div class="benefits__box">
+              Функциональное питание содержит только полезные питательные вещества.
+            </div>
           </li>
           <li class="benefits__item benefits__item--powder">
-            Выпускается в виде порошка,<br />
-            который нужно лишь залить<br />
-            кипятком и готово.
+            <div class="benefits__box">
+              Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
+            </div>
           </li>
           <li class="benefits__item benefits__item--replacement">
-            Замените один-два приема<br />
-            обычной еды на наше<br />
-            функциональное питание.
+            <div class="benefits__box">
+              Замените один-два приема обычной еды на наше функциональное питание.
+            </div>
           </li>
           <li class="benefits__item benefits__item--improvement">
-            Уже через месяц наслаждайтесь<br />
-            изменениями к лучшему<br />
-            вашего питомца!
+            <div class="benefits__box">
+              Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
+            </div>
           </li>
         </ul>
       </section>
