Стилизация блока header под размер desktop

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
     <header class="header layout">
       <a href="#">
         <picture>
+          <source srcset="img/logo-desktop.svg" media="(min-width: 1280px)" />
           <source srcset="img/logo-tablet.svg" media="(min-width: 768px)" />
           <img src="img/logo-mobile.svg" alt="логотип cat energy" />
         </picture>
