--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <header class="header layout">
-      <a href="#">
+      <a class="header__link" href="#">
         <picture>
           <source srcset="img/logo-desktop.svg" media="(min-width: 1280px)" />
           <source srcset="img/logo-tablet.svg" media="(min-width: 768px)" />
@@ -39,6 +39,7 @@
         <h1 class="content__title">Функциональное <br />питание для котов</h1>
         <p class="content__description">Занялся собой? Займись котом!</p>
         <picture class="content__img">
+          <source srcset="img/content-img-desktop.png" media="(min-width: 1280px)" />
           <source srcset="img/content-img-tablet.jpg" media="(min-width: 768px)" />
           <img src="img/content-img.png" alt="изображение корма cat energy pro" />
         </picture>
