--- a/src/index.html
+++ b/src/index.html
@@ -35,15 +35,19 @@
     </header>
 
     <main>
-      <section class="content layout">
-        <h1 class="content__title">Функциональное <br />питание для котов</h1>
-        <p class="content__description">Занялся собой? Займись котом!</p>
-        <picture class="content__img">
-          <source srcset="img/content-img-desktop.png" media="(min-width: 1280px)" />
-          <source srcset="img/content-img-tablet.jpg" media="(min-width: 768px)" />
-          <img src="img/content-img.png" alt="изображение корма cat energy pro" />
-        </picture>
-        <button class="button content__button" type="button">подобрать программу</button>
+      <section class="content">
+        <div class="content_wrapper layout">
+          <h1 class="content__title">Функциональное <br />питание для котов</h1>
+          <p class="content__description">Занялся собой? Займись котом!</p>
+          <picture class="content__img">
+            <source srcset="img/content-img-desktop.png" media="(min-width: 1280px)" />
+            <source srcset="img/content-img-tablet.jpg" media="(min-width: 768px)" />
+            <img src="img/content-img.png" alt="изображение корма cat energy pro" />
+          </picture>
+          <button class="button content__button" type="button">
+            подобрать программу
+          </button>
+        </div>
       </section>
 
       <section class="features layout">
