--- a/src/index.html
+++ b/src/index.html
@@ -36,17 +36,23 @@
 
     <main>
       <section class="content">
-        <div class="content_wrapper layout">
-          <h1 class="content__title">Функциональное <br />питание для котов</h1>
-          <p class="content__description">Занялся собой? Займись котом!</p>
-          <picture class="content__img">
-            <source srcset="img/content-img-desktop.png" media="(min-width: 1280px)" />
-            <source srcset="img/content-img-tablet.jpg" media="(min-width: 768px)" />
-            <img src="img/content-img.png" alt="изображение корма cat energy pro" />
-          </picture>
-          <button class="button content__button" type="button">
-            подобрать программу
-          </button>
+        <div class="content__wrapper layout">
+          <div class="content__inner">
+            <h1 class="content__title">Функциональное питание для котов</h1>
+            <p class="content__description">Занялся собой? Займись котом!</p>
+            <picture>
+              <source srcset="img/content-img-desktop.png" media="(min-width: 1280px)" />
+              <source srcset="img/content-img-tablet.jpg" media="(min-width: 768px)" />
+              <img
+                class="content__img"
+                src="img/content-img.png"
+                alt="изображение корма cat energy pro"
+              />
+            </picture>
+            <button class="button content__button" type="button">
+              подобрать программу
+            </button>
+          </div>
         </div>
       </section>
 
