fix 4 блоков по дизайну

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
 
     <main>
       <section class="content">
-        <div class="content__wrapper layout">
+        <div class="layout content__wrapper">
           <div class="content__inner">
             <h1 class="content__title">Функциональное питание для котов</h1>
             <p class="content__description">Занялся собой? Займись котом!</p>
