Стилизация блока example

--- a/src/index.html
+++ b/src/index.html
@@ -153,28 +153,30 @@
       </section>
 
       <section class="example">
-        <div class="layout">
-          <h2 class="example__title">Живой пример</h2>
-          <p class="example__description">
-            Борис сбросил 5&nbsp;кг за&nbsp;2&nbsp;месяца, просто заменив свой обычный
-            корм на&nbsp;Cat Energy Slim. Отличный результат без изнуряющих тренировок!
-            При этом он&nbsp;не&nbsp;менял своих привычек и&nbsp;по-прежнему спит
-            по&nbsp;16&nbsp;часов в&nbsp;день.
-          </p>
-          <dl class="description-list">
-            <div class="description-list__box description-list__box--allotted">
-              <dt class="description-list__title">снижение веса</dt>
-              <dd class="description-list__item">5 КГ</dd>
-            </div>
-            <div class="description-list__box description-list__box--allotted">
-              <dt class="description-list__title">затрачено времени</dt>
-              <dd class="description-list__item">60 дней</dd>
-            </div>
-            <div class="description-list__box">
-              <dt class="description-list__title">Затраты на питание:</dt>
-              <dd class="description-list__item">15 000 РУБ.</dd>
-            </div>
-          </dl>
+        <div class="layout example__wrapper">
+          <div class="example__inner">
+            <h2 class="example__title">Живой пример</h2>
+            <p class="example__description">
+              Борис сбросил 5&nbsp;кг за&nbsp;2&nbsp;месяца, просто заменив свой обычный
+              корм на&nbsp;Cat Energy Slim. Отличный результат без изнуряющих тренировок!
+              При этом он&nbsp;не&nbsp;менял своих привычек и&nbsp;по-прежнему спит
+              по&nbsp;16&nbsp;часов в&nbsp;день.
+            </p>
+            <dl class="description-list">
+              <div class="description-list__box description-list__box--allotted">
+                <dt class="description-list__title">снижение веса</dt>
+                <dd class="description-list__item">5 КГ</dd>
+              </div>
+              <div class="description-list__box description-list__box--allotted">
+                <dt class="description-list__title">затрачено времени</dt>
+                <dd class="description-list__item">60 дней</dd>
+              </div>
+              <div class="description-list__box">
+                <dt class="description-list__title">Затраты на питание:</dt>
+                <dd class="description-list__item">15 000 РУБ.</dd>
+              </div>
+            </dl>
+          </div>
           <div class="slider">
             <div class="slider__inner">
               <div class="slider__slice">
