Стилизация блока footer для desktop, а так же правка блоков layout & slider для mobile

--- a/src/index.html
+++ b/src/index.html
@@ -234,44 +234,46 @@
       </section>
     </main>
 
-    <footer class="footer layout">
-      <div class="footer__logo-box">
-        <a class="footer__logo" href="index.html">
-          <img
-            class="footer__img"
-            src="img/footer-logo.svg"
-            alt="логотип компании cat energy"
-          />
-        </a>
-      </div>
-      <section class="socials">
-        <h3 class="visually-hidden">
-          список ссылок перехода в социальные сети компании cat energy
-        </h3>
-        <ul class="socials__list">
-          <li>
-            <a class="socials__link socials__link--vk" href="#">
-              <span class="visually-hidden">Вконтакте</span>
-            </a>
-          </li>
-          <li>
-            <a class="socials__link socials__link--instagram" href="#">
-              <span class="visually-hidden">instagram</span>
-            </a>
-          </li>
-          <li>
-            <a class="socials__link socials__link--facebook" href="#">
-              <span class="visually-hidden">facebook</span>
-            </a>
-          </li>
-        </ul>
-      </section>
+    <footer class="footer">
+      <div class="layout footer__wrapper">
+        <div class="footer__logo-box">
+          <a class="footer__logo" href="index.html">
+            <img
+              class="footer__img"
+              src="img/footer-logo.svg"
+              alt="логотип компании cat energy"
+            />
+          </a>
+        </div>
+        <section class="socials">
+          <h3 class="visually-hidden">
+            список ссылок перехода в социальные сети компании cat energy
+          </h3>
+          <ul class="socials__list">
+            <li>
+              <a class="socials__link socials__link--vk" href="#">
+                <span class="visually-hidden">Вконтакте</span>
+              </a>
+            </li>
+            <li>
+              <a class="socials__link socials__link--instagram" href="#">
+                <span class="visually-hidden">instagram</span>
+              </a>
+            </li>
+            <li>
+              <a class="socials__link socials__link--facebook" href="#">
+                <span class="visually-hidden">facebook</span>
+              </a>
+            </li>
+          </ul>
+        </section>
 
-      <div class="footer__copyright">
-        <a class="footer__link" href="https://htmlacademy.ru/">
-          HTML&nbsp;Academy
-          <img src="img/logo_html.svg" alt="логотип HTML academy" />
-        </a>
+        <div class="footer__copyright">
+          <a class="footer__link" href="https://htmlacademy.ru/">
+            HTML&nbsp;Academy
+            <img src="img/logo_html.svg" alt="логотип HTML academy" />
+          </a>
+        </div>
       </div>
     </footer>
   </body>
