fix example map layout & slider согласно комментариям

--- a/src/index.html
+++ b/src/index.html
@@ -215,11 +215,13 @@
       </section>
 
       <section class="map">
-        <div class="map__address layout">
-          <h3 class="map__title">приглашаем к&nbsp;сотрудничеству дилеров!</h3>
-          <p class="map__description">
-            ул. Большая Конюшенная, д. 19/8 <span>Санкт-Петербург</span>
-          </p>
+        <div class="layout map__wrapper">
+          <div class="map__address">
+            <h3 class="map__title">приглашаем к&nbsp;сотрудничеству дилеров!</h3>
+            <p class="map__description">
+              ул. Большая Конюшенная, д. 19/8 <span>Санкт-Петербург</span>
+            </p>
+          </div>
         </div>
         <div class="layout map__box">
           <picture>
