Добавлен блок catalog-title. Внесены правки в блоки header, map

--- a/src/catalog.html
+++ b/src/catalog.html
@@ -43,7 +43,13 @@
       </nav>
     </header>
 
-    <main>
+    <main class="catalog">
+      <div class="catalog__header">
+        <div class="layout">
+          <h1 class="catalog__title">Каталог продукции</h1>
+        </div>
+      </div>
+
       <section class="map">
         <div class="layout map__wrapper">
           <div class="map__address">
