Добавлена графика для карточек. Разметка и стилизация под мобайл блоков card & cards.

--- a/src/catalog.html
+++ b/src/catalog.html
@@ -50,6 +50,90 @@
         </div>
       </div>
 
+      <section class="cards">
+        <ul class="cards__list">
+          <li class="card">
+            <div class="layout">
+              <div class="card__inner">
+                <div class="card__picture">
+                  <picture>
+                    <source
+                      srcset="img/product1_min-desktop.png"
+                      media="(min-width: 1280px)"
+                    />
+                    <source
+                      srcset="img/product1_min-tablet.png"
+                      media="(min-width: 768px)"
+                    />
+                    <img src="img/product1_min-mobile.png" alt="Cat Energy PRO 500 г" />
+                  </picture>
+                </div>
+                <table class="card__table">
+                  <caption class="card__title">
+                    Cat Energy PRO 500 г
+                  </caption>
+                  <tbody>
+                    <tr class="card__box">
+                      <th class="card__description">Масса</th>
+                      <th class="card__description">500 г</th>
+                    </tr>
+                    <tr class="card__box">
+                      <th class="card__description">Вкус</th>
+                      <th class="card__description">Курица</th>
+                    </tr>
+                    <tr class="card__box">
+                      <th class="card__description">Цена</th>
+                      <th class="card__description">700 Р.</th>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+              <button class="button card__button">заказать</button>
+            </div>
+          </li>
+
+          <li class="card">
+            <div class="layout">
+              <div class="card__inner">
+                <div class="card__picture">
+                  <picture>
+                    <source
+                      srcset="img/product1_max-desktop.png"
+                      media="(min-width: 1280px)"
+                    />
+                    <source
+                      srcset="img/product1_max-tablet.png"
+                      media="(min-width: 768px)"
+                    />
+                    <img src="img/product1_max-mobile.png" alt="Cat Energy PRO 500 г" />
+                  </picture>
+                </div>
+                <table class="card__table">
+                  <caption class="card__title">
+                    Cat Energy PRO 1000 г
+                  </caption>
+                  <tbody>
+                    <tr class="card__box">
+                      <th class="card__description">Масса</th>
+                      <th class="card__description">1000 г</th>
+                    </tr>
+                    <tr class="card__box">
+                      <th class="card__description">Вкус</th>
+                      <th class="card__description">Курица</th>
+                    </tr>
+                    <tr class="card__box">
+                      <th class="card__description">Цена</th>
+                      <th class="card__description">1000 Р.</th>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+              <button class="button card__button">заказать</button>
+            </div>
+          </li>
+        </ul>
+      </section>
+
       <section class="map">
         <div class="layout map__wrapper">
           <div class="map__address">
