Добавлена графика для карточек. Разметка и стилизация под мобайл блоков card & cards.

--- a/src/catalog.html
+++ b/src/catalog.html
@@ -51,9 +51,9 @@
       </div>
 
       <section class="cards">
-        <ul class="cards__list">
+        <ul class="layout cards__list">
           <li class="card">
-            <div class="layout">
+            <div class="card__wrapper">
               <div class="card__inner">
                 <div class="card__picture">
                   <picture>
@@ -93,7 +93,7 @@
           </li>
 
           <li class="card">
-            <div class="layout">
+            <div class="card__wrapper">
               <div class="card__inner">
                 <div class="card__picture">
                   <picture>
